2007-05-13  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/plugins/lib3ds/gameswf_3ds.*: inhibited till the best times
	* gameswf/gameswf_font.*
	* gameswf/gameswf_impl.*
	* gameswf/gameswf_stream.*
	* gameswf/gameswf_styles.*
	* gameswf/gameswf_shape.cpp:
	added readers of DefineFont3, DefineShape4, DefineFileAttribute & DefineFontAlignZones tags

2007-05-06  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/plugins/lib3ds/gameswf_3ds.*: more readable, fixed memory leak & cleanup
	* gameswf/gameswf_render_handler_ogl.cpp: 
	added m_texture=0 operator after glDeleteTexture() for debuging memory leaks

2007-05-03  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_environment.cpp: in load_file() function strncmp() ==> strnicmp()
	* gameswf/gameswf_3ds.*: added texturing of 3D model
	* gameswf/plugins/lib3ds/test.(fla,swf): updated
	* gameswf/plugins/lib3ds/cup.3ds: removed (since does not contains texture)
	* gameswf/plugins/lib3ds/books.3ds: added 3D model that contains texture
	
2007-05-02  Thatcher Ulrich <tu@tulrich.com>

	Misc build fixes & cleanup.
	
	* base/tu_config.h: by default, don't link to MySQL, LIB3DS,
	FFMPEG
	* gameswf/Makefile: update filelist with newer files
	* gameswf/*: normalize include file paths -- no relative paths;
	path is always relative to project root.

2007-05-01  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_3ds.*: moved to gameswf/plugins/lib3ds/ directory
	* gameswf/plugins/lib3ds/test.(fla,swf): added testcase 
	* gameswf/plugins/lib3ds/cup.3ds: added 3D model that is used in test.swf

2007-04-30  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_3ds.*: work is go on
	
2007-04-28  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_3ds.*: added camera

2007-04-28  Vitaly Alexeev <tishka92@yahoo.com>

	* base/tu_config.h,
	* gameswf/gameswf_sound_handler_sdl.*: 
	* gameswf/gameswf_as_classes/as_db.*,
	* gameswf/gameswf_as_classes/as_netstream.*,
	* gameswf/gameswf_as_classes/as_table.*,