@@ -149,149 +149,11 @@ namespace gameswf
 				}}
 			}
 		}
-		else if (tag_type == 48)
+		else if (tag_type == 48 || tag_type == 75)
 		{
-			IF_VERBOSE_PARSE(log_msg("reading DefineFont2\n"));
-
-			bool	has_layout = (in->read_uint(1) != 0);
-			m_shift_jis_chars = (in->read_uint(1) != 0);
-			m_unicode_chars = (in->read_uint(1) != 0);
-			m_ansi_chars = (in->read_uint(1) != 0);
-			bool	wide_offsets = (in->read_uint(1) != 0);
-			m_wide_codes = (in->read_uint(1) != 0);
-			m_is_italic = (in->read_uint(1) != 0);
-			m_is_bold = (in->read_uint(1) != 0);
-			Uint8	reserved = in->read_u8();
-
-			// Inhibit warning.
-			reserved = reserved;
-
-			m_name = in->read_string_with_length();
-
-			int	glyph_count = in->read_u16();
-			
-			int	table_base = in->get_position();
-
-			// Read the glyph offsets.  Offsets
-			// are measured from the start of the
-			// offset table.
-			array<int>	offsets;
-			int	font_code_offset;
-			if (wide_offsets)
-			{
-				// 32-bit offsets.
-				for (int i = 0; i < glyph_count; i++)
-				{
-					offsets.push_back(in->read_u32());
-				}
-				font_code_offset = in->read_u32();
-			}
-			else
-			{
-				// 16-bit offsets.
-				for (int i = 0; i < glyph_count; i++)
-				{
-					offsets.push_back(in->read_u16());
-				}
-				font_code_offset = in->read_u16();
-			}
-
-			m_glyphs.resize(glyph_count);
-			m_texture_glyphs.resize(m_glyphs.size());
-
-			if (m->get_create_font_shapes() == DO_LOAD_FONT_SHAPES)
-			{
-				// Read the glyph shapes.
-				{for (int i = 0; i < glyph_count; i++)
-				{
-					// Seek to the start of the shape data.
-					int	new_pos = table_base + offsets[i];
-					// if we're seeking backwards, then that looks like a bug.
-					assert(new_pos >= in->get_position());
-					in->set_position(new_pos);
-
-					// Create & read the shape.
-					shape_character_def* s = new shape_character_def;
-					s->read(in, 22, false, m);
-
-					m_glyphs[i] = s;
-				}}
-
-				int	current_position = in->get_position();
-				if (font_code_offset + table_base != current_position)
-				{
-					// Bad offset!  Don't try to read any more.
-					return;
-				}
-			}
-			else
-			{
-				// Skip the shape data.
-				int	new_pos = table_base + font_code_offset;
-				if (new_pos >= in->get_tag_end_position())
-				{
-					// No layout data!
-					return;
-				}
-
-				in->set_position(new_pos);
-			}
-
-			read_code_table(in);
-
-			// Read layout info for the glyphs.
-			if (has_layout)
-			{
-				m_ascent = (float) in->read_s16();
-				m_descent = (float) in->read_s16();
-				m_leading = (float) in->read_s16();
-				
-				// Advance table; i.e. how wide each character is.
-				m_advance_table.resize(m_glyphs.size());
-				for (int i = 0, n = m_advance_table.size(); i < n; i++)
-				{
-					m_advance_table[i] = (float) in->read_s16();
-				}
-
-				// Bounds table.
-				//m_bounds_table.resize(m_glyphs.size());	// kill
-				rect	dummy_rect;
-				{for (int i = 0, n = m_glyphs.size(); i < n; i++)
-				{
-					//m_bounds_table[i].read(in);	// kill
-					dummy_rect.read(in);
-				}}
-
-				// Kerning pairs.
-				int	kerning_count = in->read_u16();
-				{for (int i = 0; i < kerning_count; i++)
-				{
-					Uint16	char0, char1;
-					if (m_wide_codes)
-					{
-						char0 = in->read_u16();
-						char1 = in->read_u16();
-					}
-					else
-					{
-						char0 = in->read_u8();
-						char1 = in->read_u8();
-					}
-					float	adjustment = (float) in->read_s16();
-
-					kerning_pair	k;
-					k.m_char0 = char0;
-					k.m_char1 = char1;
-
-					// Remember this adjustment; we can look it up quickly
-					// later using the character pair as the key.
-					m_kerning_pairs.add(k, adjustment);
-				}}
-			}
-		}
-		else if (tag_type == 75)
-		{
-			IF_VERBOSE_PARSE(log_msg("reading DefineFont3\n"));
+			IF_VERBOSE_PARSE(
+				log_msg("reading DefineFont %d\n", tag_type == 48 ? 2 : 3)
+			);
 
 			bool	has_layout = (in->read_uint(1) != 0);
 			m_shift_jis_chars = (in->read_uint(1) != 0);
