@@ -244,6 +244,7 @@ namespace gameswf
 	void	sound_stream_block_loader(stream* in, int tag_type, movie_definition_sub* m);
 	void	define_file_attribute_loader(stream* in, int tag_type, movie_definition_sub* m);
 	void	define_font_alignzones(stream* in, int tag_type, movie_definition_sub* m);
+	void	define_csm_textsetting_loader(stream* in, int tag_type, movie_definition_sub* m);
 
 }	// end namespace gameswf
 
